# WandAnalysis

./: .gitignore  README.md  SESSION_NOTES.md  firstTimeSetup.sh  pyproject.toml
configs/: paths.example.yaml
docs/: dataset_overview.md  iqm.md  slice_qc.md  visualise_bold.md
logs/: batch_qc_2026-02-24_143113.json  batch_qc_2026-02-24_143455.json
results/sub-01187/iqm/: dvars.tsv  iqm.json
results/sub-01187/slice_qc/: slicemean.npy
results/sub-04843/iqm/: dvars.tsv  iqm.json
results/sub-04843/slice_qc/: slicemean.npy
results/sub-05117/iqm/: dvars.tsv  iqm.json
results/sub-05117/slice_qc/: slicemean.npy
results/sub-05532/iqm/: dvars.tsv  iqm.json
results/sub-05532/slice_qc/: slicemean.npy
results/sub-06180/iqm/: dvars.tsv  iqm.json
results/sub-06180/slice_qc/: slicemean.npy
results/sub-06400/iqm/: dvars.tsv  iqm.json
results/sub-06400/slice_qc/: slicemean.npy
results/sub-06783/iqm/: dvars.tsv  iqm.json
results/sub-06783/slice_qc/: slicemean.npy
results/sub-08033/iqm/: dvars.tsv  iqm.json
results/sub-08033/slice_qc/: slicemean.npy
results/sub-08096/iqm/: dvars.tsv  iqm.json
results/sub-08096/slice_qc/: slicemean.npy
results/sub-08726/iqm/: dvars.tsv  iqm.json
results/sub-08726/slice_qc/: slicemean.npy
results/sub-09188/iqm/: dvars.tsv  iqm.json
results/sub-09188/slice_qc/: slicemean.npy
results/sub-09540/iqm/: dvars.tsv  iqm.json
results/sub-09720/iqm/: dvars.tsv  (+1 more)
scripts/: batch_qc.py  download.sh  fetch_subject.sh  find_downloaded.sh  iqm.py  setup_env.sh  setup_gin.sh  slice_qc.py  visualise_bold.py  visualise_t1w.py
(+422 files in other folders)
