[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wand_analysis"
version = "0.1.0"
description = "Analysis of the WAND fMRI dataset"
requires-python = ">=3.10"
dependencies = [
    "nibabel",
    "nilearn",
    "matplotlib",
    "pyyaml",
    "scipy",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "results*", "literature*", "scripts*"]
